[package]
name = "ifnk_axum_util"
version = "0.1.3"
edition = "2021"
authors = ['ifnk']
description = "自己用的 axum util通用库"
license = "MIT"
[lib]
name = "ifnk_axum_util"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axum = {version= "0.7.5",features = ["multipart","ws"] }
chrono = "0.4.38"
http = "1.1.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = "1.37.0"
toml = "0.8.12"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
tracing = {version =  "0.1.40" }
tracing-appender = "0.2.3"
tracing-subscriber = {version =  "0.3.18", features = ["env-filter"]}
